--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prettier" : "prettier --config .prettierrc \"src/**/s*.ts\" --write",
-    "lint" : "eslint . --ext .ts",
-    "build" : "npx tsc",
+    "prettier": "prettier --config .prettierrc \"src/**/s*.ts\" --write",
+    "lint": "eslint . --ext .ts",
+    "build": "npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Abdelaziz Moustafa Elgeab",
@@ -16,7 +16,9 @@
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "express": "^4.18.2",
     "prettier": "^2.8.1",
+    "sharp": "^0.31.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
