--- a/package.json
+++ b/package.json
@@ -4,22 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prettier": "prettier --config .prettierrc \"src/**/s*.ts\" --write",
+    "prettier": "prettier --config .prettierrc \"src/**/*.ts\" --write",
     "lint": "eslint . --ext .ts",
+    "lint-fix": "eslint . --fix --ext .ts",
     "build": "npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Abdelaziz Moustafa Elgeab",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.15",
     "@types/node": "^18.11.17",
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "express": "^4.18.2",
     "prettier": "^2.8.1",
-    "sharp": "^0.31.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "jasmine": "^4.5.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "sharp": "^0.31.2",
+    "supertest": "^6.3.3"
   }
 }
