--- a/package.json
+++ b/package.json
@@ -8,16 +8,22 @@
     "lint": "eslint . --ext .ts",
     "lint-fix": "eslint . --fix --ext .ts",
     "build": "npx tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "jasmine": "jasmine",
+    "test": "npm run build && npm run jasmine",
+    "start": "nodemon src/index.ts",
+    "startall": "start http://localhost:3000 & nodemon src/index.ts"
   },
   "author": "Abdelaziz Moustafa Elgeab",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.15",
+    "@types/jasmine": "^4.3.1",
     "@types/node": "^18.11.17",
+    "@types/sharp": "^0.31.0",
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "nodemon": "^2.0.20",
     "prettier": "^2.8.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
