--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/jasmine": "^4.3.1",
     "@types/node": "^18.11.17",
     "@types/sharp": "^0.31.0",
+    "@types/supertest": "^2.0.12",
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
