--- a/.eslintrc
+++ b/.eslintrc
@@ -1,23 +1,34 @@
 {
-    "root": true,
-    "plugins": [
-      "prettier"
-    ],
-    "extends": [
-      "eslint:recommended",
-      "prettier"
-    ],
-    "rules": {
-      "prettier/prettier": 2 ,
-      "no-use-before-define": ["error", { "functions": true, "classes": true }],
-      "no-var": "error",
-      "prefer-const": "error"
-    },
-    "parserOptions": {
-      "ecmaVersion": 2017
-    },
-    "env": {
-      "node": true,
-      "es6": true
-    }
+  "env": {
+    "browser": true,
+    "node": true
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended",
+    "prettier"
+  ],
+  "parserOptions": {
+    "sourceType": "module",
+    "ecmaVersion": 2020
+  },
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
+  "rules": {
+    "@typescript-eslint/no-inferrable-types": [0],
+    "valid-jsdoc": "off",
+    "semi": [2, "always"],
+    "keyword-spacing": ["error", {"after": true}],
+    "comma-spacing": ["error", { "before": false, "after": true }],
+    "space-infix-ops": ["error", {"int32Hint": false}],
+    "eqeqeq": [2, "smart"],
+    "space-before-blocks": "error",
+    "space-before-function-paren": ["error", {
+      "anonymous": "always",
+      "named": "never",
+      "asyncArrow": "always"
+    }],
+    "no-extra-boolean-cast": "off"
+  }
 }
