--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "jasmine": "jasmine",
     "test": "npm run build && npm run jasmine",
     "start": "nodemon src/index.ts",
-    "startall": "start http://localhost:3000 & nodemon src/index.ts"
+    "startall": "start 'http://localhost:3000' && nodemon src/index.ts"
   },
   "author": "Abdelaziz Moustafa Elgeab",
   "license": "ISC",
